Fixed daemon launcher